--- a/modules/account_payment_sepa_cog/template/pain.001.003.03.xml
+++ b/modules/account_payment_sepa_cog/template/pain.001.003.03.xml
@@ -68,7 +68,7 @@ this repository contains the full copyright notices and license terms. -->
                 <!-- UltmtCdtr -->
                 <!-- Purp -->
                 <RmtInf py:if="payment.sepa_remittance_information">
-                    <Ustrd>${normalize('NFKD', payment.sepa_remittance_information).encode('ascii', 'replace')[:140]}</Ustrd>
+                    <Ustrd>${normalize('NFKD', payment.sepa_remittance_information).encode('ascii', 'replace').decode('ascii')[:140]}</Ustrd>
                 </RmtInf>
             </CdtTrfTxInf>
         </PmtInf>
