--- a/modules/account_payment_sepa_cog/template/pain.008.001.04.xml
+++ b/modules/account_payment_sepa_cog/template/pain.008.001.04.xml
@@ -19,12 +19,12 @@ this repository contains the full copyright notices and license terms. -->
         <!-- AdrTp -->
         <!-- Dept -->
         <!-- SubDept -->
-        <StrtNm py:if="address.street">${address.street_for_sepa()[:70]}</StrtNm>
+        <StrtNm py:if="address.street_for_sepa()">${address.street_for_sepa()[:70]}</StrtNm>
         <!-- BldgNb -->
-        <PstCd py:if="address.zip">${normalize('NFKD', address.zip).encode('ascii', 'replace')}</PstCd>
-        <TwnNm py:if="address.city">${normalize('NFKD', address.city).encode('ascii', 'replace')}</TwnNm>
-        <CtrySubDvsn py:if="address.subdivision">${normalize('NFKD',address.subdivision.rec_name).encode('ascii', 'replace')}</CtrySubDvsn>
-        <Ctry py:if="address.country">${normalize('NFKD', address.country.code).encode('ascii', 'replace')}</Ctry>
+        <PstCd py:if="address.zip">${normalize('NFKD', address.zip).encode('ascii', 'replace').decode('ascii')}</PstCd>
+        <TwnNm py:if="address.city">${normalize('NFKD', address.city).encode('ascii', 'replace').decode('ascii')}</TwnNm>
+        <CtrySubDvsn py:if="address.subdivision">${normalize('NFKD',address.subdivision.rec_name).encode('ascii', 'replace').decode('ascii')}</CtrySubDvsn>
+        <Ctry py:if="address.country">${normalize('NFKD', address.country.code).encode('ascii', 'replace').decode('ascii')}</Ctry>
         <AdrLine py:if="address.sepa_adrline_1">${address.sepa_adrline_1}</AdrLine>
         <AdrLine py:if="address.sepa_adrline_2">${address.sepa_adrline_2}</AdrLine>
         <!-- AdrLine -->
