bank_cog: Bics link to wrong bank (#3158)
Fix #12638

--- a/modules/bank_cog/view/bank_data_set_form.xml
+++ b/modules/bank_cog/view/bank_data_set_form.xml
@@ -13,4 +13,7 @@ this repository contains the full copyright notices and license terms. -->
     <newline/>
     <label name="resource"/>
     <field name="resource"/>
+    <newline/>
+    <label name="is_update"/>
+    <field name="is_update"/>
 </form>
