document_request_electronic_signature: Trigger an event when signature is complete (#3209)
Fix #12876

--- a/modules/document_request/view/attachment_form.xml
+++ b/modules/document_request/view/attachment_form.xml
@@ -12,5 +12,7 @@ this repository contains the full copyright notices and license terms. -->
         </group>
         <label name="status_change_date"/>
         <field name="status_change_date"/>
+        <label name="request_line"/>
+        <field name="request_line"/>
     </xpath>
 </data>
