--- a/modules/process_cog/view/event_type_action_form.xml
+++ b/modules/process_cog/view/event_type_action_form.xml
@@ -2,8 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='action']" position="after">
-        <newline/>
+    <xpath expr="//field[@name='action']" position="after">
         <label name="process_to_initiate"/>
         <field name="process_to_initiate"/>
         <label name="filter_on_event_object"/>
