--- a/modules/contract/view/event_type_action_form.xml
+++ b/modules/contract/view/event_type_action_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='priority']" position="after">
+    <xpath expr="//field[@name='priority']" position="after">
         <label name="notification_delay"/>
         <field name="notification_delay"/>
         <label name="show_descriptor"/>
