--- a/modules/rule_engine/view/event_type_action_form.xml
+++ b/modules/rule_engine/view/event_type_action_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='pyson_condition']" position="after">
+    <xpath expr="//field[@name='pyson_condition']" position="after">
         <label name="filter_rule"/>
         <field name="filter_rule" colspan="3"/>
         <field name="filter_rule_extra_data" colspan="4"/>
