claim_almerys: Add Almerys payback batch (#3205)
Fix #12868

--- a/modules/account_cog/view/move_line_to_pay_list.xml
+++ b/modules/account_cog/view/move_line_to_pay_list.xml
@@ -5,7 +5,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="date"/>
     <field name="maturity_date"/>
     <field name="party"/>
-    <field name="debit"/>
+    <field name="amount"/>
     <field name="reconciliation"/>
     <field name="state"/>
 </tree>
