--- a/modules/party_cog/view/person_tree.xml
+++ b/modules/party_cog/view/person_tree.xml
@@ -2,6 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
+    <field name="active" tree_invisible="1"/>
     <field name="code"/>
     <field name="gender"/>
     <field name="name"/>
