web_configuration: add binary_value to web ui resource, add API to retrieve values (#3304)
Fix #13159

--- a/modules/web_configuration/view/web_ui_resource_form.xml
+++ b/modules/web_configuration/view/web_ui_resource_form.xml
@@ -4,10 +4,14 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="origin_resource"/>
     <field name="origin_resource"/>
+    <label name="technical_kind"/>
+    <field name="technical_kind"/>
     <newline/>
     <label name="key"/>
     <field name="key" colspan="3"/>
     <label name="value"/>
     <field name="value" colspan="3"/>
+    <label name="binary_value"/>
+    <field name="binary_value" colspan="3"/>
     <field name="ir_model_resource" invisible="1"/>
 </form>
