--- a/modules/offered/view/extra_data_list.xml
+++ b/modules/offered/view/extra_data_list.xml
@@ -3,6 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="kind"/>
+    <field name="sequence_order"/>
     <field name="string"/>
     <field name="type_"/>
     <field name="name"/>
