--- a/modules/bank_cog/view/bank_data_set_form.xml
+++ b/modules/bank_cog/view/bank_data_set_form.xml
@@ -13,7 +13,7 @@ this repository contains the full copyright notices and license terms. -->
     <newline/>
     <label name="resource"/>
     <field name="resource"/>
-    <newline/>
     <label name="is_update"/>
     <field name="is_update"/>
+    <field name="countries_to_import" colspan="4"/>
 </form>
