claim_document: Fixes on document resquest lines for claim process (#3358)
Fix #00000

--- a/modules/claim_life/view/beneficiary_form.xml
+++ b/modules/claim_life/view/beneficiary_form.xml
@@ -21,7 +21,7 @@ this repository contains the full copyright notices and license terms. -->
     <separator name="description" colspan="2"/>
     <field name="description" colspan="2"/>
     <separator name="document_request_lines" colspan="2"/>
-    <field name="document_request_lines" colspan="2"/>
+    <field name="document_request_lines" colspan="2" mode="list-form"/>
     <field name="identified" invisible="1"/>
     <field name="ignore_share" invisible="1"/>
 </form>
