--- a/modules/account_payment_sepa_cog/template/pain.008.003.02.xml
+++ b/modules/account_payment_sepa_cog/template/pain.008.003.02.xml
@@ -15,7 +15,7 @@ this repository contains the full copyright notices and license terms. -->
             <MsgId>${group.number[:35]}</MsgId>
             <CreDtTm>${datetime.datetime.now().replace(microsecond=0).isoformat()}</CreDtTm>
             <NbOfTxs>${sum(len(payments) for _, payments in group.sepa_payments)}</NbOfTxs>
-            <CtrlSum>${sum(p.amount for p in group.payments)}</CtrlSum>
+            <CtrlSum>${group.amount}</CtrlSum>
             <InitgPty>
                 ${PartyIdentification(group.sepa_initiating_party, with_address=False)}
             </InitgPty>
@@ -62,7 +62,7 @@ this repository contains the full copyright notices and license terms. -->
                     <MndtRltdInf py:with="mandate = payment.sepa_mandate">
                         <MndtId>${mandate.identification}</MndtId>
                         <DtOfSgntr>${mandate.signature_date.isoformat()}</DtOfSgntr>
-                        <py:if test="mandate.amendment_of and not any([x.state == 'succeeded' for x in mandate.payments])">
+                        <py:if test="mandate.amendment_of and not mandate.has_succeeded_payments">
                         <AmdmntInd>true</AmdmntInd>
                         <AmdmntInfDtls>
                             <OrgnlDbtrAcct>
