--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -42,6 +42,8 @@ this repository contains the full copyright notices and license terms. -->
     <label name="end_date"/>
     <field name="end_date"/>
     <newline/>
+    <separator name="comment" colspan="4"/>
+    <field name="comment" colspan="4"/>
     <group id="invisible">
         <field name="manual_start_date"/>
         <field name="option"/>
