--- a/modules/contract_insurance/view/extra_premium_list.xml
+++ b/modules/contract_insurance/view/extra_premium_list.xml
@@ -4,6 +4,7 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="value_as_string"/>
     <field name="motive"/>
+    <field name="comment"/>
     <field name="start_date"/>
     <field name="end_date"/>
     <button string="Propagate" name="propagate"/>
