--- a/modules/contract_underwriting/view/option_underwriting_list.xml
+++ b/modules/contract_underwriting/view/option_underwriting_list.xml
@@ -2,11 +2,11 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree editable="bottom">
-    <field name="covered"/>
+    <field name="covered" expand="1"/>
     <field name="option"/>
-    <field name="decision" widget="selection"/>
+    <field name="decision" widget="selection" expand="1"/>
     <field name="extra_data_summary"/>
     <field name="automatic_decision" tree_invisible="1"/>
-    <field name="extra_premiums"/>
-    <field name="exclusions"/>
+    <field name="extra_premiums" expand="1"/>
+    <field name="exclusions" expand="1"/>
 </tree>
