--- a/modules/contract_insurance_document_request/view/document_desc_list.xml
+++ b/modules/contract_insurance_document_request/view/document_desc_list.xml
@@ -2,7 +2,8 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name='allow_force_receive']" position="after">
-        <field name="extra_data_summary"/>
+    <xpath expr="/tree" position="inside">
+        <field name="products_name"/>
+        <field name="products" tree_invisible="1"/>
     </xpath>
 </data>
