offered: fix extra data groups sub-groups relation (#3379)
Fix #13574

--- a/modules/offered/view/extra_data_group_form.xml
+++ b/modules/offered/view/extra_data_group_form.xml
@@ -15,7 +15,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="extra_data"/>
         </page>
         <page id="sub_groups" string="Sub-groups">
-            <field name="sub_groups"/>
+            <field name="extra_data_groups"/>
         </page>
     </notebook>
 </form>
