report_engine: Allow filtering on target objects (#3381)
Fix #13591

--- a/modules/report_engine/view/event_type_action_form.xml
+++ b/modules/report_engine/view/event_type_action_form.xml
@@ -2,6 +2,11 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
+    <xpath expr="//group[@id='action']/label[@name='action']" position="before">
+        <label name="filter_on_target_object"/>
+        <field name="filter_on_target_object"/>
+        <newline/>
+    </xpath>
     <xpath expr="//group[@id='action']" position="after">
         <newline/>
         <field name="report_templates" colspan="4"/>
