--- a/modules/contract_premium_modification/view/discount_waiver_form.xml
+++ b/modules/contract_premium_modification/view/discount_waiver_form.xml
@@ -13,6 +13,16 @@
     <label name="automatic"/>
     <field name="automatic"/>
     <newline/>
+    <label name="duration_rule"/>
+    <field name="duration_rule"/>
+    <newline/>
+    <field name="duration_rule_extra_data" colspan="4"/>
+    <newline/>
+    <label name="eligibility_rule"/>
+    <field name="eligibility_rule"/>
+    <newline/>
+    <label name="eligibility_rule_extra_data" colspan="4"/>
+    <newline/>
     <label name="account_for_modification"/>
     <field name="account_for_modification"/>
     <field name="taxes" colspan="4"/>
