--- a/modules/contract_premium_modification/view/discount_premium_option_list.xml
+++ b/modules/contract_premium_modification/view/discount_premium_option_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <tree>
     <field name="contract"/>
+    <field name="rec_name"/>
     <field name="automatic"/>
     <field name="start_date"/>
     <field name="end_date"/>
