loan: Include future loans in outstanding amount (#3492)
Fix #14008

--- a/modules/loan/view/display_insured_outstanding_loan_balance_select_date_form.xml
+++ b/modules/loan/view/display_insured_outstanding_loan_balance_select_date_form.xml
@@ -5,6 +5,9 @@ this repository contains the full copyright notices and license terms. -->
     <label name="date"/>
     <field name="date"/>
     <newline/>
+    <label name="and_future_loans"/>
+    <field name="and_future_loans"/>
+    <newline/>
     <label name="currency"/>
     <field name="currency" widget="selection" xexpand="0"/>
     <field name="possible_currencies" invisible="1"/>
