--- a/modules/party_public_employment/view/employment_form.xml
+++ b/modules/party_public_employment/view/employment_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/field[@name='employment_kind']" position="after">
+    <xpath expr="/form/field[@name='employment_identifier']" position="after">
         <label name="retirement_pension_identifier"/>
         <field name="retirement_pension_identifier"/>
     </xpath>
