--- a/modules/party_public_employment/view/public_service_work_category_list.xml
+++ b/modules/party_public_employment/view/public_service_work_category_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <tree>
+    <field name="name"/>
     <field name="code"/>
-    <field name="party"/>
-    <field name="legal_entity"/>
 </tree>
