endorsement_party: fix party_id dispaly in address endorsement (#3374)
* endorsement_party: hide party_id in address endorsement

--- a/modules/endorsement_party/view/party_change_address_form.xml
+++ b/modules/endorsement_party/view/party_change_address_form.xml
@@ -3,7 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <form>
     <group id="endorsement_info" colspan="2">
-        <field name="party_id"/>
+        <field name="party_id" invisible="1"/>
         <label name="effective_date"/>
         <field name="effective_date"/>
         <label name="endorsement_part"/>
