report_engine_email: Send empty paper form associated to request line by e-mail (#3519)
Fix #14120

--- a/modules/document_request/view/document_description_form.xml
+++ b/modules/document_request/view/document_description_form.xml
@@ -9,5 +9,8 @@ this repository contains the full copyright notices and license terms. -->
         <newline/>
         <label name="prerequisite"/>
         <field name="prerequisite"/>
+        <newline/>
+        <label name="paper_form"/>
+        <field name="paper_form"/>
     </xpath>
 </data>
