contract_coverage_amount: Calculate and return coverage amount (#3448)
Ref #13644

--- a/modules/contract_coverage_amount/view/contract_manage_options_option_displayer_form.xml
+++ b/modules/contract_coverage_amount/view/contract_manage_options_option_displayer_form.xml
@@ -8,7 +8,7 @@ this repository contains the full copyright notices and license terms. -->
         <field name="coverage_amount"/>
         <label name="coverage_amount_selection"/>
         <field name="coverage_amount_selection"/>
-        <field name="has_coverage_amount" invisible="1"/>
-        <field name="free_coverage_amount" invisible="1"/>
+        <field name="coverage_amount_mode" invisible="1"/>
+        <field name="coverage_amount_label" invisible="1"/>
     </xpath>
 </data>
