--- a/modules/contract_coverage_amount/view/coverage_amount_rule_form.xml
+++ b/modules/contract_coverage_amount/view/coverage_amount_rule_form.xml
@@ -2,8 +2,8 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form>
-    <label name="free_input"/>
-    <field name="free_input"/>
+    <label name="amount_mode"/>
+    <field name="amount_mode"/>
     <newline/>
     <label name="rule"/>
     <field name="rule"/>
