--- a/modules/contract_coverage_amount/view/coverage_amount_rule_list.xml
+++ b/modules/contract_coverage_amount/view/coverage_amount_rule_list.xml
@@ -3,4 +3,5 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="rule"/>
+    <field name="label"/>
 </tree>
