account_payment_sepa_cog: Allow to configure sepa dump file in a payment journal (#3572)
Fix #14301

--- a/modules/account_payment_sepa_cog/view/payment_journal_form.xml
+++ b/modules/account_payment_sepa_cog/view/payment_journal_form.xml
@@ -16,5 +16,7 @@ this repository contains the full copyright notices and license terms. -->
         <field name="force_smnda"/>
         <label name="remittance_info"/>
         <field name="remittance_info"/>
+        <label name="sepa_file_export_directory"/>
+        <field name="sepa_file_export_directory"/>
     </xpath>
 </data>
